@@ -1,3 +1,5 @@
+2013-07-14 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * corrections to README.md and to tests
 2013-07-12 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
   * release 0.1.2
   * finished README.md
